added the generic lua object, it has previous boss lua object properties ( changes AA612 )

--- a/Editor/CMakeLists.txt
+++ b/Editor/CMakeLists.txt
@@ -52,6 +52,7 @@ file(GLOB_RECURSE SRCS ${PROJECT_SOURCE_DIR}/src/*.cpp
     ${PROJECT_SOURCE_DIR}/../GC3/src/F_Lua_Boss_Manager.cpp
     ${PROJECT_SOURCE_DIR}/../GC3/src/F_Lua_Boss_State.cpp
     ${PROJECT_SOURCE_DIR}/../GC3/src/F_Lua_Boss.cpp
+    ${PROJECT_SOURCE_DIR}/../GC3/src/F_Lua_GenericObject.cpp
     ${PROJECT_SOURCE_DIR}/../GC3/src/FairyBase.cpp
     ${PROJECT_SOURCE_DIR}/../GC3/src/KanjiEffectrObject.cpp
     ${PROJECT_SOURCE_DIR}/../GC3/src/F_EnemyBasic.pp
