--- a/Editor/CMakeLists.txt
+++ b/Editor/CMakeLists.txt
@@ -9,6 +9,7 @@ set(CMAKE_CXX_STANDARD_REQUIRED True)
 file(GLOB_RECURSE SRCS ${PROJECT_SOURCE_DIR}/src/*.cpp 
     
     ${PROJECT_SOURCE_DIR}/../GC3/src/F_Player.cpp
+    ${PROJECT_SOURCE_DIR}/../GC3/src/BulletManupilator.cpp
     ${PROJECT_SOURCE_DIR}/../GC3/src/F_MarisaRocket_small.cpp
     ${PROJECT_SOURCE_DIR}/../GC3/src/F_BaseEnemy.cpp
     ${PROJECT_SOURCE_DIR}/../GC3/src/GuardianShield.cpp
