adding patern with lua behavior

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,160 +1,5 @@
 {
   "files.associations": {
-    "*.todo": "note"
-},
-
-  "workbench.colorCustomizations": {
-    "editor.background": "#181818db",
-    "C_Cpp.enhancedColorization": "Enabled"
-  },
-  "editor.wordWrap": "on",
-  "editor.semanticTokenColorCustomizations": {
-    "rules": {
-      "type:cpp": {
-        "foreground": "#2bdfd6"
-      },
-      "variable:cpp": {
-        "foreground": "#99D7F8"
-      },
-      "property:cpp": {
-        "foreground": "#99D7F8"
-      },
-      "namespace:cpp": {
-        "foreground": "#2bdfd6",
-        "fontStyle": "italic bold underline"
-      }
-    }
-  },
-  "editor.tokenColorCustomizations": {
-    "strings": "#ff5100",
-    "comments": "#66bf0cc6",
-    "keywords": "#fdf624da",
-    "functions": "#e38820"
-  },
-
-  "editor.tokenColorCustomizations": {
-    "textMateRules": [
-        // Note
-        {
-            // #
-            "scope": "source.note comment",
-            "settings": {
-                "foreground": "#88846f"
-            }
-        },
-        {
-            // %
-            "scope": "source.note string",
-            "settings": {
-                "foreground": "#66D9EF"
-            }
-        },
-        {
-            // x
-            "scope": "source.note entity.name.function",
-            "settings": {
-                "foreground": "#A6E22E"
-            }
-        },
-        {
-            // -
-            "scope": "source.note variable.parameter",
-            "settings": {
-                "foreground": "#FD971F",
-                "fontStyle": ""
-            }
-        },
-        {
-            // ?
-            "scope": "source.note support.function",
-            "settings": {
-                "foreground": "#E6DB74"
-            }
-        },
-        {
-            // ~
-            "scope": "source.note support.constant",
-            "settings": {
-                "foreground": "#E6DB74"
-            }
-        },
-        {
-            // !
-            "scope": "source.note keyword",
-            "settings": {
-                "foreground": "#F92672"
-            }
-        },
-        {
-            // !!
-            "scope": "source.note invalid",
-            "settings": {
-                "foreground": "#F92672",
-                "fontStyle": "bold underline"
-            }
-        }
-    ]
-},
-
-
-  "C_Cpp_Runner.cCompilerPath": "gcc",
-  "C_Cpp_Runner.cppCompilerPath": "g++",
-  "C_Cpp_Runner.debuggerPath": "gdb",
-  "C_Cpp_Runner.cStandard": "",
-  "C_Cpp_Runner.cppStandard": "",
-  "C_Cpp_Runner.msvcBatchPath": "",
-  "C_Cpp_Runner.useMsvc": false,
-  "C_Cpp_Runner.warnings": [
-    "-Wall",
-    "-Wextra",
-    "-Wpedantic",
-    "-Wshadow",
-    "-Wformat=2",
-    "-Wcast-align",
-    "-Wconversion",
-    "-Wsign-conversion",
-    "-Wnull-dereference"
-  ],
-  "C_Cpp_Runner.msvcWarnings": [
-    "/W4",
-    "/permissive-",
-    "/w14242",
-    "/w14287",
-    "/w14296",
-    "/w14311",
-    "/w14826",
-    "/w44062",
-    "/w44242",
-    "/w14905",
-    "/w14906",
-    "/w14263",
-    "/w44265",
-    "/w14928"
-  ],
-  "C_Cpp_Runner.enableWarnings": true,
-  "C_Cpp_Runner.warningsAsError": false,
-  "C_Cpp_Runner.compilerArgs": [],
-  "C_Cpp_Runner.linkerArgs": [],
-  "C_Cpp_Runner.includePaths": [],
-  "C_Cpp_Runner.includeSearch": [
-    "*",
-    "**/*"
-  ],
-  "C_Cpp_Runner.excludeSearch": [
-    "**/build",
-    "**/build/**",
-    "**/.*",
-    "**/.*/**",
-    "**/.vscode",
-    "**/.vscode/**"
-  ],
-  "C_Cpp_Runner.useAddressSanitizer": false,
-  "C_Cpp_Runner.useUndefinedSanitizer": false,
-  "C_Cpp_Runner.useLeakSanitizer": false,
-  "C_Cpp_Runner.showCompilationTime": false,
-  "C_Cpp_Runner.useLinkTimeOptimization": false,
-  "C_Cpp_Runner.msvcSecureNoWarnings": false,
-  "files.associations": {
     "iostream": "cpp",
     "array": "cpp",
     "atomic": "cpp",
@@ -227,5 +72,138 @@
     "span": "cpp",
     "typeindex": "cpp",
     "variant": "cpp"
-  }
+  },
+  "workbench.colorCustomizations": {
+    "editor.background": "#181818db",
+    "C_Cpp.enhancedColorization": "Enabled"
+  },
+  "editor.wordWrap": "on",
+  "editor.semanticTokenColorCustomizations": {
+    "rules": {
+      "type:cpp": {
+        "foreground": "#2bdfd6"
+      },
+      "variable:cpp": {
+        "foreground": "#99D7F8"
+      },
+      "property:cpp": {
+        "foreground": "#99D7F8"
+      },
+      "namespace:cpp": {
+        "foreground": "#2bdfd6",
+        "fontStyle": "italic bold underline"
+      }
+    }
+  },
+  "editor.tokenColorCustomizations": {
+    "textMateRules": [
+      {
+        "scope": "source.note comment",
+        "settings": {
+          "foreground": "#88846f"
+        }
+      },
+      {
+        "scope": "source.note string",
+        "settings": {
+          "foreground": "#66D9EF"
+        }
+      },
+      {
+        "scope": "source.note entity.name.function",
+        "settings": {
+          "foreground": "#A6E22E"
+        }
+      },
+      {
+        "scope": "source.note variable.parameter",
+        "settings": {
+          "foreground": "#FD971F",
+          "fontStyle": ""
+        }
+      },
+      {
+        "scope": "source.note support.function",
+        "settings": {
+          "foreground": "#E6DB74"
+        }
+      },
+      {
+        "scope": "source.note support.constant",
+        "settings": {
+          "foreground": "#E6DB74"
+        }
+      },
+      {
+        "scope": "source.note keyword",
+        "settings": {
+          "foreground": "#F92672"
+        }
+      },
+      {
+        "scope": "source.note invalid",
+        "settings": {
+          "foreground": "#F92672",
+          "fontStyle": "bold underline"
+        }
+      }
+    ]
+  },
+  "C_Cpp_Runner.cCompilerPath": "gcc",
+  "C_Cpp_Runner.cppCompilerPath": "g++",
+  "C_Cpp_Runner.debuggerPath": "gdb",
+  "C_Cpp_Runner.cStandard": "",
+  "C_Cpp_Runner.cppStandard": "",
+  "C_Cpp_Runner.msvcBatchPath": "",
+  "C_Cpp_Runner.useMsvc": false,
+  "C_Cpp_Runner.warnings": [
+    "-Wall",
+    "-Wextra",
+    "-Wpedantic",
+    "-Wshadow",
+    "-Wformat=2",
+    "-Wcast-align",
+    "-Wconversion",
+    "-Wsign-conversion",
+    "-Wnull-dereference"
+  ],
+  "C_Cpp_Runner.msvcWarnings": [
+    "/W4",
+    "/permissive-",
+    "/w14242",
+    "/w14287",
+    "/w14296",
+    "/w14311",
+    "/w14826",
+    "/w44062",
+    "/w44242",
+    "/w14905",
+    "/w14906",
+    "/w14263",
+    "/w44265",
+    "/w14928"
+  ],
+  "C_Cpp_Runner.enableWarnings": true,
+  "C_Cpp_Runner.warningsAsError": false,
+  "C_Cpp_Runner.compilerArgs": [],
+  "C_Cpp_Runner.linkerArgs": [],
+  "C_Cpp_Runner.includePaths": [],
+  "C_Cpp_Runner.includeSearch": [
+    "*",
+    "**/*"
+  ],
+  "C_Cpp_Runner.excludeSearch": [
+    "**/build",
+    "**/build/**",
+    "**/.*",
+    "**/.*/**",
+    "**/.vscode",
+    "**/.vscode/**"
+  ],
+  "C_Cpp_Runner.useAddressSanitizer": false,
+  "C_Cpp_Runner.useUndefinedSanitizer": false,
+  "C_Cpp_Runner.useLeakSanitizer": false,
+  "C_Cpp_Runner.showCompilationTime": false,
+  "C_Cpp_Runner.useLinkTimeOptimization": false,
+  "C_Cpp_Runner.msvcSecureNoWarnings": false
 }
