--- a/Feintgine/CMakeLists.txt
+++ b/Feintgine/CMakeLists.txt
@@ -6,7 +6,7 @@ enable_testing()
 
 file(GLOB TARGET_SRC "./src/*.cpp")
 
-set(CMAKE_CXX_FLAGS "-fpermissive -std=c++17 -fno-strict-aliasing ")
+set(CMAKE_CXX_FLAGS "-fpermissive -std=c++17 ")
 
 set(Generic_include_dir ${PROJECT_SOURCE_DIR}/../Feintgine/include)
 
@@ -24,6 +24,6 @@ add_library(Feintgine STATIC
     ${TARGET_SRC}
 )
 
-target_link_libraries(Feintgine ${DEPS_lib_dir}/libSDL2.a ${DEPS_lib_dir}/libSDL2main.a  ${DEPS_lib_dir}/glew32s.lib ${DEPS_lib_dir}/libCEGUIBase-0.dll.a ${DEPS_lib_dir}/libCEGUIOpenGLRenderer-0.dll.a  ${DEPS_lib_dir}/libCEGUIExpatParser.dll.a ${DEPS_lib_dir}/libfreetype.a ${DEPS_lib_dir}/libprotobuf.a  ${DEPS_lib_dir}/libprotoc.a ${DEPS_lib_dir}/libprotobuf-lite.a   ${DEPS_lib_dir}/libSDL2_net.dll.a ${DEPS_lib_dir}/libSDL2_ttf.dll.a   ${DEPS_lib_dir}/libSDL2_mixer.dll.a  ${DEPS_lib_dir}/liblua53.a ${DEPS_lib_dir}/libFreeImage.a ${DEPS_lib_dir}/libassimp.dll.a ${DEPS_lib_dir}/libnanogui.dll.a libopengl32.a )
+target_link_libraries(Feintgine ${DEPS_lib_dir}/libSDL2.a ${DEPS_lib_dir}/libSDL2main.a  ${DEPS_lib_dir}/glew32s.lib ${DEPS_lib_dir}/libCEGUIBase-0.dll.a ${DEPS_lib_dir}/libCEGUIOpenGLRenderer-0.dll.a  ${DEPS_lib_dir}/libCEGUIExpatParser.dll.a ${DEPS_lib_dir}/libfreetype.a ${DEPS_lib_dir}/libprotobuf.a  ${DEPS_lib_dir}/libprotoc.a ${DEPS_lib_dir}/libprotobuf-lite.a   ${DEPS_lib_dir}/libSDL2_net.dll.a ${DEPS_lib_dir}/libSDL2_ttf.dll.a   ${DEPS_lib_dir}/libSDL2_mixer.dll.a  ${DEPS_lib_dir}/liblua53.a ${DEPS_lib_dir}/libFreeImage.a ${DEPS_lib_dir}/libassimp.dll.a ${DEPS_lib_dir}/libnanogui.dll.a libopengl32.a {DEPS_lib_dir}/libasync++.dll.a} )
 
 
