added funtion to load theme in tgui, complete the login scene

--- a/Touhou_TB/CMakeLists.txt
+++ b/Touhou_TB/CMakeLists.txt
@@ -9,6 +9,7 @@ set(CMAKE_CXX_STANDARD_REQUIRED True)
 file(GLOB_RECURSE SRCS ${PROJECT_SOURCE_DIR}/src/*.cpp
 
     ${PROJECT_SOURCE_DIR}/../PacketDescription/NetworkPacket.cpp
+    ${PROJECT_SOURCE_DIR}/../TGUI_theme/*.cpp
 )
 
 # a macro that gets all of the header containing directories. 
